[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forestry-france"
version = "0.1.0"
description = "Automated forestry management system for French forests"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "ForestryFrance Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.27",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "geopandas>=0.14.1",
    "rasterio>=1.3.9",
    "shapely>=2.0.2",
    "alembic>=1.13.1",
    "psycopg>=3.1.16",
    "httpx>=0.26.0",
    "loguru>=0.7.2",
    "pygeoprocessing>=2.5.1",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.9",
    "pydantic-ai>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.1",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
    "mkdocstrings[python]>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/Karamasoldier/forestry-france"
Documentation = "https://github.com/Karamasoldier/forestry-france/docs"
Repository = "https://github.com/Karamasoldier/forestry-france.git"
Issues = "https://github.com/Karamasoldier/forestry-france/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--doctest-modules --cov=forestry_france"
